Fix: duck position in contrast with close btn

--- a/css/style.css
+++ b/css/style.css
@@ -118,8 +118,8 @@ a{
 /* duck */
 
 .duck-img{
-    right: 0;
-    top:10px;
+    right: 40px;
+    top:4px;
     transform: rotate(-0.05turn);
     filter: drop-shadow(5px 5px 2px rgba(0, 0, 0, 0.5));
 }
